--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,6 @@ jobs:
           
           make setup
           
-          sudo systemctl restart python-code-runner
+          sudo systemctl restart chiroqcha
           
           echo "Deployment completed successfully!"
