--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,6 +16,7 @@ jobs:
         key: ${{ secrets.SERVER_SSH_KEY }}
         script: |
           cd /home/husniddin/chiroqcha
+          git pull
           make server-start
-          
+
           echo "Deployment completed successfully!"
