--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -16,7 +16,9 @@ jobs:
         key: ${{ secrets.SERVER_SSH_KEY }}
         script: |
           cd /home/husniddin/chiroqcha
+          source env/bin/activate
           git pull
-          make server-start
+          pip install -r requirements.txt
+          supervisorctl restart chiroqcha
 
           echo "Deployment completed successfully!"
